# fileops-server

./: .gitignore  README.md  pyproject.toml
src/fileops_server/: __init__.py  server.py
